5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4312/executions/1712_2506.log
== TEST (2019-05-15 09:33:49) 
-- CODE:
tam = int(input("Quant. de peixes: "))
P_cres = int(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))

x = 0
anos = 0

while(tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	x = y - q
	anos = anos + 1
if(tam == 1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:34:54) 
-- CODE:
tam = int(input("Quant. de peixes: "))
P_cres = int(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))

x = 0
anos = 0

while(tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	x = y - q
	anos = anos + 1
if(tam == 1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"
print(msg)
print(anos)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:35:43) 
-- CODE:
tam = int(input("Quant. de peixes: "))
P_cres = int(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))

x = 0
anos = 0

while(tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	x = y - q
	anos = anos + 1
if(tam == 1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"
print(msg)
print(anos)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:36:23) 
-- CODE:
tam = int(input("Quant. de peixes: "))
P_cres = int(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))

x = 0
anos = 0

while(tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	x = y - q
	anos = anos + 1

if(tam == 1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"

print(msg)
print(anos)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:55:05) 
-- CODE:
tam = int(input("Quant. de peixes: "))
P_cres = int(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))

x = 0
anos = 0

while(tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	x = q
	anos = anos + 1

if(tam == 1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"

print(msg)
print(anos)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:55:17) 
-- CODE:
tam = int(input("Quant. de peixes: "))
P_cres = int(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))

x = tam
anos = 0

while(tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	x = tam - q
	anos = anos + 1

if(tam == 1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"

print(msg)
print(anos)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 09:55:59) 
-- CODE:
tam = int(input("Quant. de peixes: "))
P_cres = int(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))

x = tam
anos = 0

while(tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	x = tam - q
	anos = anos + 1

if(tam == 1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"
	print(msg)

print(anos)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:00:03) 
-- CODE:
tam = int(input("Quant. de peixes: "))
P_cres = int(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))

x = tam
anos = 0

while(tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	x = tam - q
	anos = anos + 1
	print(y)

if(tam == 1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"

print(msg)
print(anos)
	
-- OUTPUT:
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 10:01:06) 
-- CODE:
tam = int(input("Quant. de peixes: "))
P_cres = int(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))

x = tam
anos = 0

while(tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	x = y - q
	anos = anos + 1

if(tam == 1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"

print(msg)
print(anos)
	
-- OUTPUT:
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.04
74.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:42:19) 
-- CODE:
tam = float(input("Quant. de peixes: "))
P_cres = float(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))
 
anos = 0

while( tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)

if(tam  1200):
	msg = "LIMITE"
else:
	msg = "EXTINÇAO"

print(msg)
print(anos)
	
-- ERROR:
File "XXXX", line 17
    if(tam  1200):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 13:42:29) 
-- CODE:
tam = float(input("Quant. de peixes: "))
P_cres = float(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))
 
anos = 0

while( tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)


	
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 13:42:43) 
-- CODE:
tam = float(input("Quant. de peixes: "))
P_cres = float(input("Percentual de cres: "))
q = int(input("Quant. para vendas: "))
 
anos = 0

while( tam > 0 and tam < 12000):
	y = tam * P_cres / 100
	tam = tam + y - q
	anos = anos + 1
if(tam >= 12000):
	print("LIMITE")
elif(tam <= 0):
	print("EXTINCAO")
print(anos)


	
-- EXECUTION TIME:
0.24377
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
